Add WAKE_LOCK permission into AndroidManifest

--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,2 +1,3 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.ocetnik.timer">
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 </manifest>
