--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   ],
   "main": "index.js",
   "scripts": {
+    "eslint": "eslint *.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,5 +22,13 @@
   "license": "MIT",
   "peerDependencies": {
     "react-native": ">=0.47.0"
+  },
+  "devDependencies": {
+    "eslint": "^5.4.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.11.1",
+    "react-native": "^0.56.0"
   }
 }
